fix the msg wrapping issue

--- a/style.css
+++ b/style.css
@@ -92,5 +92,7 @@ img{
      #msg{
         width: 100%;
         font-size:  1.8rem; ;
+        display: flex;
+        flex-wrap: wrap;
     }
 }
